@@ -1,3 +1,9 @@
+2013-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/kick_table.cpp:
+	- キャッシュしておくパスの最大数を256から1024に変更
+	- デバッグ出力用の関数追加
+
 2013-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/self_intercept_simulator.cpp:
